- correct info box visibility

--- a/css/style.css
+++ b/css/style.css
@@ -46,15 +46,21 @@ form {
 }
 
 .info-box {
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(255, 255, 255, 0.5);
     border-radius: 5px;
     position: absolute;
     top: 15px;
     left: 15px;
     width: 500px;
-    color: #969696;
+    color: #2d2d2d;
     padding: 10px 20px;
     display: none;
+    font-weight: bold;
+    backdrop-filter: blur(3px) brightness(60%);
+}
+
+.info-box li {
+    list-style-type: none;
 }
 
 canvas {
